# CurveFitting

./: .gitignore  CMakeLists.txt  curve.hpp  main.cpp  readme.md  white_board.cpp  white_board.h
